compiler/pl0/project/tests/error/procedure_as_expression.pl0
program funcdemo;
var a;
procedure foo;
begin
    return;
end;
begin
    /* should not pass */
    a := call foo;
end.
